[package]
name = "generational_vector"
description = "A vector type using generational indices"
keywords = ["collections", "vector", "generational-index", "gamedev"]
categories = ["memory-management", "rust-patterns", "game-development"]
documentation = "https://docs.rs/crate/generational_vector/"
repository = "https://github.com/sunsided/generational-vector-rs"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["Markus Mayer"]

[dependencies]
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lib_benchmark"
harness = false
