[package]
name = "generational_vector"
description = "A vector type using generational indices"
keywords = ["collections", "vector", "generational-index", "gamedev"]
categories = ["memory-management", "rust-patterns", "game-development"]
documentation = "https://docs.rs/crate/generational_vector/"
repository = "https://github.com/sunsided/generational-vector-rs"
license = "MIT"
version = "0.2.1"
edition = "2021"
authors = ["Markus Mayer"]

[features]
smallvec = ["dep:smallvec"]
tinyvec = ["dep:tinyvec"]

[dependencies]
num-traits = "0.2.14"
smallvec = { version = "1.10.0", optional = true }
tinyvec = { version = "1.6.0", optional = true, features = ["alloc"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "lib_benchmark"
harness = false

[[example]]
name = "example"
path = "examples/example.rs"
